--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <properties>
         <hadoop.common>2.7.1</hadoop.common>
         <hadoop.core>1.2.1</hadoop.core>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
 
@@ -25,6 +26,14 @@
             <artifactId>hadoop-core</artifactId>
             <version>${hadoop.core}</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
 
     </dependencies>
 
