--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <hadoop.common>2.7.1</hadoop.common>
         <hadoop.core>1.2.1</hadoop.core>
         <log4j.version>1.2.17</log4j.version>
+        <mrunit.version>1.1.0</mrunit.version>
     </properties>
 
 
@@ -34,8 +35,35 @@
             <version>${log4j.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.apache.mrunit</groupId>
+            <artifactId>mrunit</artifactId>
+            <version>${mrunit.version}</version>
+            <classifier>hadoop2</classifier>
+        </dependency>
     </dependencies>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.2</version>
+                <configuration>
+
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
